(lang dune 3.21)
(using rocq 0.11)
(name rocq-tactic-parser)
(generate_opam_files true)

(source (github SkylabsAI/skylabs-fm))
(authors "Gregory Malecha <gregory@skylabs-ai.com>")
(maintainers "Gregory Malecha <gregory@skylabs-ai.com>")
(license  LGPL-2.1-only)

(package
 (name rocq-tactic-parser)
 (synopsis "Print the AST of a tactic expression in JSON format")
 (depends
  rocq-core
  rocq-stdlib
  yojson))

(subst disabled)
