(lang dune 3.17)
(using coq 0.10)
(name rocq-term-deps)
(generate_opam_files true)

(source (github SkylabsAI/skylabs-fm))
(authors "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")
(maintainers "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")
(license  GPL-2.0-or-later)

(package
 (name rocq-term-deps)
 (synopsis "Rocq plugin for computing the dependencies of a constant")
 (depends
  rocq-core))

(subst disabled)
