[project]
name = "rocq-agent-toolkit-backend"
version = "0.1.0"
description = "Chat service for PSI verifier"
authors = [{ name = "SkyLabs Team", email = "support@skylabs-ai.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.111.0,<0.117.0",
    "uvicorn[standard]>=0.29.0,<0.36.0",
    "httpx>=0.27.0,<0.29.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/backend"]

[tool.hatch.build.targets.wheel]
include = ["src/backend"]

[tool.hatch.build.targets.wheel.sources]
"src/backend" = "backend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"