[project]
name = "rocq-agent-toolkit-backend"
version = "0.1.0"
description = "Backend for Rocq Agent Toolkit"
authors = [{ name = "SkyLabs Team", email = "support@skylabs-ai.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.111.0,<0.117.0",
    "uvicorn[standard]>=0.29.0,<0.36.0",
    "httpx>=0.27.0,<0.29.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "asyncpg>=0.30.0",
    "boto3>=1.34.0"
]


[project.scripts]
start-dev = "backend.main:start"

[tool.hatch.build.targets.sdist]
include = ["src/backend"]

[tool.hatch.build.targets.wheel]
include = ["src/backend"]

[tool.hatch.build.targets.wheel.sources]
"src/backend" = "backend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.package-data]
"backend" = ["py.typed"]

[dependency-groups]
dev = [
    "mypy>=1.18.2,<2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.2",
    "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_mode = "auto"

[tool.taskipy.tasks]
lint_ci = "ruff check"
format_ci = "ruff format --check"
reformat = "ruff format"
typecheck_ci = "mypy ."
test_ci = "pytest"
