[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonrpc-tp"
version = "0.0.1"
description = "Python API for the Rocq document manager."
authors = [{ name = "Rodolphe Lepigre", email = "rodolphe.lepigre@skyabs-ai.com" }]
requires-python = ">=3.13"
readme = "README.md"
license = "GPL-2.0-or-later" # Revisit this license

[project.urls]
Repository = "https://github.com/SkylabsAI/skylabs-fm"
Issues = "https://github.com/SkylabsAI/skylabs-fm/issues"
Changelog = "https://github.com/SkylabsAI/skylabs-fm/tree/main/changes"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "flake8>=6.0.0,<7",
    "mypy>=1.18.2,<2",
    "types-pyyaml>=6.0.12.20250915,<7",
    "taskipy>=1.14.1",
    "ruff>=0.14.4",
]

[tool.hatch.build.targets.sdist]
include = ["src/jsonrpc_tp"]

[tool.hatch.build.targets.wheel]
include = ["src/jsonrpc_tp"]

[tool.hatch.build.targets.wheel.sources]
"src/jsonrpc_tp" = "jsonrpc_tp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"jsonrpc_tp" = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.taskipy.tasks]
format_ci = "ruff check"
typecheck_ci = "mypy ."
