[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonrpc-tp"
version = "0.0.1"
description = "Python API for the Rocq document manager."
authors = [{ name = "Rodolphe Lepigre", email = "rodolphe.lepigre@skyabs-ai.com" }]
requires-python = ">=3.13"
readme = "README.md"
license = "GPL-2.0-or-later" # Revisit this license

[project.urls]
Repository = "https://github.com/SkylabsAI/skylabs-fm"
Issues = "https://github.com/SkylabsAI/skylabs-fm/issues"
Changelog = "https://github.com/SkylabsAI/skylabs-fm/tree/main/changes"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "flake8>=6.0.0,<7",
    "mypy>=1.18.2,<2",
    "types-pyyaml>=6.0.12.20250915,<7",
    "taskipy>=1.14.1",
    "ruff>=0.14.4",
]

[tool.hatch.build.targets.sdist]
include = ["src/jsonrpc_tp"]

[tool.hatch.build.targets.wheel]
include = ["src/jsonrpc_tp"]

[tool.hatch.build.targets.wheel.sources]
"src/jsonrpc_tp" = "jsonrpc_tp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"jsonrpc_tp" = ["py.typed"]

[tool.taskipy.tasks]
lint_ci = "ruff check"
format_ci = "ruff format --check"
reformat = "ruff format"
typecheck_ci = "mypy ."
test_ocaml_ci = "pytest tests/"
precommit = "task lint_ci; task reformat; task typecheck_ci"